feat: update tests to jni